# satisfactory_calculator

./: .gitignore  Cargo.toml  build.rs  index.html  readme.md
.github/workflows/: build-site.yml
docs/: index.html  satisfactory_calculator-ad83d62c5c1f6110.js  satisfactory_calculator-ad83d62c5c1f6110_bg.wasm
examples/: fetch_recipes.rs
recipes/: auto_output.json  recipes1.json  test_recipes_1.json
src/: common_tests.rs  graph.rs  main.rs  styles.scss  tests.rs  utilities.rs  yew_frontend.rs
src/yew_frontend/: filtered_item_selection.rs  mod.rs  styles.scss  valued_item.rs
