[package]
name = "satisfactory_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
