[package]
name = "satisfactory_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.3.0"
md-5 = "0.10.5"
minilp = "0.2.2"
ndarray = "0.15.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
