[package]
name = "satisfactory_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.3.0", features = ["json", "http"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Url", "UrlSearchParams"] }
yew = { version = "0.20.0", features = ["csr"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { version = "0.11.18", features = ["blocking","json"] }

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
md-5 = "0.10.5"
minilp = "0.2.2"
ndarray = "0.15.6"
